# e_cup_2025_ml_challenge

./: README.md  best_config_f1=0.7201.txt  best_config_f1=0.7261.txt  counterfeit_eda.py  counterfeit_eda_190825.py  get_image_embeddings.py  get_text_embeddings.py  pyproject.toml  simple_pipeline_with_text_embds_balanced_flaml.py  simple_pipeline_with_text_embds_balanced_flaml_f1=0.7001.py  simple_pipeline_with_text_embds_balanced_flaml_f1=0.7191.py  simple_pipeline_with_text_embds_flaml_f1=0.6535.py  simple_pipeline_with_text_image_embds_flaml_f1=0.7261.py  simple_pipeline_with_text_image_embds_flaml_image_f1=0.7333.py  simple_pipeline_with_text_image_embds_flaml_image_smoothing.py  simple_pipeline_with_text_image_embds_flaml_pca_pyod_f1=0.7398.py  simple_pipeline_with_text_image_embds_flaml_pca_pyod_f1=0.7449.py  simple_pipeline_with_text_image_embds_flaml_pca_pyod_f1=0.7451_reprod.py  simple_pipeline_with_text_image_embds_flaml_pca_pyod_f1=0.7453.py  simple_pipeline_with_text_image_embds_optuna_lightgbm_tuner.py  submission_f1=0.6535.csv  submission_f1=0.7001.csv  submission_f1=0.7191.csv  submission_f1=0.7261.csv  submission_f1=0.7333.csv  submission_f1=0.7398.csv  submission_f1=0.7453.csv
