[project]
name = "e-cup-2025-ml-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.8",
    "category-encoders>=2.8.1",
    "datasets>=4.0.0",
    "flaml[automl]>=2.3.6",
    "ipython>=9.4.0",
    "jupyterlab>=4.4.6",
    "marimo>=0.14.17",
    "mlflow>=3.3.0",
    "numpy==2.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "shap>=0.48.0",
    "torch>=2.8.0",
    "transformers>=4.55.2",
]
